--- a/js tutorial/index.html
+++ b/js tutorial/index.html
@@ -5,7 +5,7 @@
             <meta name="viewpoint" content="width=device-width,
             initial-scale=1.0">
             <meta http-equiv="X-UA-campatible" content="ie=edge">
-            <title>java script leaning</title>
+            <title>java script studying</title>
         </head>
         <body>
             <header>
